--- a/3_Analisis.ipynb
+++ b/3_Analisis.ipynb
@@ -245,6 +245,26 @@
     {
      "data": {
       "text/plain": [
+       "(5026, 19)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "Index(['Unnamed: 0', 'fecha', 'Hora', 'Ruta Accidente', 'Ruta vuelo', 'origen',\n",
        "       'destino', 'escalas', 'Operador', 'Avion', 'registro', 'all_aboard',\n",
        "       'Pasajeros a Bordo', 'crew_aboard', 'cantidad de fallecidos',\n",
